pkglib_LTLIBRARIES = HwBaryonDecay.la

HwBaryonDecay_la_LDFLAGS = $(AM_LDFLAGS) -module -version-info 8:0:0
HwBaryonDecay_la_LIBADD = $(top_builddir)/PDT/libHwBaryonWidth.la
HwBaryonDecay_la_SOURCES = \
Baryon1MesonDecayerBase.cc             Baryon1MesonDecayerBase.h   \
Baryon1MesonDecayerBase.fh\
BaryonFactorizedDecayer.cc             BaryonFactorizedDecayer.h   \
KornerKramerCharmDecayer.cc            KornerKramerCharmDecayer.h  \
NonLeptonicHyperonDecayer.cc           NonLeptonicHyperonDecayer.h \
RadiativeHyperonDecayer.cc             RadiativeHyperonDecayer.h \
NonLeptonicOmegaDecayer.cc             NonLeptonicOmegaDecayer.h   \
OmegaXiStarPionDecayer.cc              OmegaXiStarPionDecayer.h    \
SemiLeptonicBaryonDecayer.cc           SemiLeptonicBaryonDecayer.h \
StrongHeavyBaryonDecayer.cc            StrongHeavyBaryonDecayer.h  \
SU3BaryonDecupletOctetPhotonDecayer.cc SU3BaryonDecupletOctetPhotonDecayer.h\
SU3BaryonDecupletOctetScalarDecayer.cc SU3BaryonDecupletOctetScalarDecayer.h\
SU3BaryonOctetDecupletScalarDecayer.cc SU3BaryonOctetDecupletScalarDecayer.h\
SU3BaryonOctetOctetPhotonDecayer.cc    SU3BaryonOctetOctetPhotonDecayer.h   \
SU3BaryonOctetOctetScalarDecayer.cc    SU3BaryonOctetOctetScalarDecayer.h   \
SU3BaryonSingletOctetPhotonDecayer.cc  SU3BaryonSingletOctetPhotonDecayer.h \
SU3BaryonSingletOctetScalarDecayer.cc  SU3BaryonSingletOctetScalarDecayer.h \
RadiativeHeavyBaryonDecayer.cc RadiativeHeavyBaryonDecayer.h
